--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -114,13 +114,101 @@
   },
   "AboutSection": {
     "Title": "ASEGURA TU FUTURO, EMPIEZA HOY",
+    "Banner": "EQUIPO SUNSHINE",
+    "ButtonText": "¿Te gustaria unirte a nuestro equipo?",
     "Introduction": {
       "1": "Hemos desarrollado un token que va a permitirles a los inversionistas, ser parte de este mundo financiero virtual, dando inicio a una nueva era tecnológica y la oportunidad de invertir en activos digitales",
       "2": "Dicho token lleva por nombre SUNSHINE IMAGINE",
       "3": "SUNSHINE es para los emprendedores, las personas que quieran ir un paso más adelante, para los que no se conformen con poco, SUNSHINE es el futuro, es para quien desea grandeza, aquel que perdió el miedo y decidió tomar el control de su vida."
     },
     "Differences": {
-      "Title": "¿QUÉ NOS DIFERENCIA?"
+      "Title": "¿QUÉ NOS DIFERENCIA?",
+      "Items": {
+        "1": {
+          "Title": "ACCESIBILIDAD",
+          "Text": "Cualquier persona mayor de edad tiene acceso a la compra de SUN, Sunshine puede ser tu primer acercamiento a un servicio financiero seguro."
+        },
+        "2": {
+          "Title": "PRIVACIDAD",
+          "Text": "Sunshine nunca compartirá tus datos personales, datos de tus inversiones ni cualquier tipo de información, ya que el SUN corre por la Blockchain Ethereum cada movimiento que realices será privado y anónimo."
+        },
+        "3": {
+          "Title": "SOLIDEZ",
+          "Text": "El SUN es un token descentralizado pues ningún gobierno ni banco tiene poder sobre él, Sunshine se distingue por la planificación estratégica que le da a sus recursos, y por el equipo responsable y comprometido que la conforma."
+        },
+        "4": {
+          "Title": "TRABAJO EN EQUIPO",
+          "Text": "Juntos seremos el mejor equipo, y así podremos consolidar el éxito juntos, basados en el trabajo del equipo Sunshine y el compromiso que tenemos con cada uno de nuestros Sunholders."
+        }
+      }
+    },
+    "Team": {
+      "Items": {
+        "1": {
+          "Name": "Viridiana Uribe",
+          "Career": "Operations Coordinator",
+          "Description": "Coordinación del correcto desarrollo de las actividades operativas de la empresa, Garantizar procesos que se lleven acabo en el tiempo y forma."
+        },
+        "2": {
+          "Name": "Jocelyn Uribe",
+          "Career": "Community Manager",
+          "Description": "Creación de contenido en RRSS. Monitoreo de los contenidos en redes sociales. Gestión y planificación de las acciones de comunicación."
+        },
+        "3": {
+          "Name": "Christian Manjarrez",
+          "Career": "Graphic Designer",
+          "Description": "Diseño de contenido digital ( Edición de videos, contenido para redes sociales , gifs , infografías, etc.) Maquetación y desarrollo visual para web."
+        },
+        "4": {
+          "Name": "Manuel Viniegra",
+          "Career": "Fullstack Developer",
+          "Description": "Desarrollador Fullstack de sistemas web con amplio stack de tecnologías backend y frontend como Javascript y diseño responsive"
+        },
+        "5": {
+          "Name": "Augusto Armenta",
+          "Career": "Fullstack Developer",
+          "Description": "Desarrollador Fullstack con amplio conocimiento en tecnologías web, móviles, servidores y patrónes de arquitectura."
+        }
+
+      }
+    }
+  },
+
+  "MapaApp": {
+    "Funding": {
+      "Title": "Distribución de fondos",
+      "Symphony": "Symphony",
+      "Hawk": "Hawk",
+      "Lion": "Lion"
+    },
+    "Tokens": {
+      "Title": "Distribución de tokens",
+      "Reinvestment": "Reinversión",
+      "Sunholders": "Sunholders",
+      "SUNTeam": "Equipo SUN"
+    },
+    "Price": "El costo inicial del SUN es de 1 USD",
+    "SunshineToken": {
+      "Title": "Token sunshine",
+      "Items": {
+        "1": "Token compatible, interoperable y reutilizable dentro de diversas aplicaciones, billeteras y exchange, propiedades heredadas del estándar ERC-20 bajo el cual fue creado.",
+        "2": "Utilizan \"gas\" para cubrir las tarifas de transacción. El Gas es, dicho de una forma simple, el precio que se tiene que pagar al realizar una operación en la red de Ethereum.",
+        "3": "Se alojan en el blockchain de Etherum, a diferencia de otras criptomonedas que se alojan en sus respectiva blockchain.",
+        "4": "Desarrollado con Solidity, lenguaje de programación diseñado para ejecutar Smart contracts de manera óptima en la máquina virtual de Etherum (EVM).",
+        "5": "Utiliza la API estable de OpenZeppelin, las cuales verifican que los contratos presenten brechas de seguridad o puntos débiles que puedan ser explotados."
+      }
+    },
+    "AppDownload": {
+      "Title": "Próximamente",
+      "Subtitle": "Nuestra app",
+      "Items": {
+        "1": "Tú cartera disponible donde y cuando quieras",
+        "2": "Revisa tu saldo todo el tiempo",
+        "3": "Mantente conectado"
+      },
+      "Avaliable": "Disponible para",
+      "Footer": "Construye una cartera"
     }
   }
+
 }
