se agrega nuevo favicon y se cmabia tokes por utilidades

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -178,7 +178,7 @@
       "Lion": "Lion"
     },
     "Tokens": {
-      "Title": "Token distribution",
+      "Title": "utilities distribution",
       "Reinvestment": "Reinvestment",
       "Sunholders": "Sunholders",
       "SUNTeam": "SUN Team"
