--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -178,7 +178,7 @@
       "Lion": "Lion"
     },
     "Tokens": {
-      "Title": "Distribución de tokens",
+      "Title": "Distribución de utilidades",
       "Reinvestment": "Reinversión",
       "Sunholders": "Sunholders",
       "SUNTeam": "Equipo SUN"
