--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -60,7 +60,7 @@
     },
     "Seguro": {
       "Titulo": "SEGURO",
-      "Texto": "Procesamiento confiable, el SUN está asentado sobre el protocolo de Blockchain Ethereum, lo que lo hace privado y a prueba de cualquier hackeo"
+      "Texto": "Procesamiento confiable, el SUN está asentado sobre el protocolo de Blockchain TRON, lo que lo hace privado y a prueba de cualquier hackeo."
     },
     "Transparente": {
       "Titulo": "TRANSPARENTE",
@@ -72,7 +72,7 @@
     "Items": [
       {
         "Title": "¿Qué es un Token?",
-        "Text": "Es una ficha virtual que tiene una unidad de valor la cual es emitida por una entidad privada, tiene diversas funciones a parte de actuar como una moneda virtual y está asentado sobre el protocolo de Blockchain Ethereum, lo que lo hace transparente, privado y a prueba de cualquier hackeo."
+        "Text": "Un token es una ficha virtual que tiene una unidad de valor la cual es emitida en una Blockchain, tiene diversas funciones a parte de actuar como una moneda virtual, lo que lo hace transparente, privado y a prueba de cualquier hackeo."
       },
       {
         "Title": "¿Qué es una criptomoneda?",
@@ -187,11 +187,11 @@
     "SunshineToken": {
       "Title": "Token sunshine",
       "Items": [
-        "Token compatible, interoperable y reutilizable dentro de diversas aplicaciones, billeteras y exchange, propiedades heredadas del estándar ERC-20 bajo el cual fue creado.",
-        "Utilizan \"gas\" para cubrir las tarifas de transacción. El Gas es, dicho de una forma simple, el precio que se tiene que pagar al realizar una operación en la red de Ethereum.",
-        "Se alojan en el blockchain de Etherum, a diferencia de otras criptomonedas que se alojan en sus respectiva blockchain.",
-        "Desarrollado con Solidity, lenguaje de programación diseñado para ejecutar Smart contracts de manera óptima en la máquina virtual de Etherum (EVM).",
-        "Utiliza la API estable de OpenZeppelin, las cuales verifican que los contratos presenten brechas de seguridad o puntos débiles que puedan ser explotados."
+        "Permite a los desarrolladores de aplicaciones emitir sus propios tokens dentro de la plataforma TRON.",
+        "El tiempo promedio de confirmación por transacción es de 1 min. Para que se confirme la transacción, se requerirán 19 bloques de red (se crea un nuevo bloque aproximadamente cada 3 segundos).",
+        "La máquina virtual (TVM), los contratos inteligentes y los estándares de token TRON son compatibles con Ethereum, lo que simplifica la migración de proyectos a esta cadena de bloques.",
+        "Los usuarios pueden realizar transacciones en la red TRON de forma gratuita, es decir, sin comisiones debido a la presencia de parámetros especiales: ancho de banda y energía.",
+        "Capacidad de simplificar la creación de tokens (TRC10), sin mucho dinero y tiempo."
       ]
     },
     "AppDownload": {
@@ -217,7 +217,7 @@
     "Inicio al proyecto Cripto Banco"
   ],
   "Whitepaper": {
-    "Read": "LEE",
+    "Read": "Lee",
     "Click": "Click para descargar pdf"
   }
 }
