se suben  todos los cambios de los cards y efectos

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -9,10 +9,10 @@
   "Banner": {
     "Titulo": [
       "SE PARTE DE NUESTRA",
-      "REVOLUCION",
-      "TECNOLOGICA"
+      "REVOLUCIÓN",
+      "TECNOLÓGICA"
     ],
-    "Texto": "UNA NUEVA ERA DE EN EL MERCADO DIGITAL, basado en cadenas de bloques inteligentes para el intercambio de tokens de utilidad.",
+    "Texto": "UNA NUEVA ERA DE EN EL MERCADO DIGITAL, basado en cadenas de bloques inteligentes para el intercambio de activos digitales.",
     "TextoBoton": "SE PARTE DE SUNSHINE"
   },
   "CountdownL": {
@@ -56,38 +56,34 @@
   "Ventajas": {
     "Facil": {
       "Titulo": "DE USO FÁCIL",
-      "Texto": "Diseño accesible para todos los Sunholders, creado para que sea práctico, cómodo y rápido poder adquirir el SUN"
+      "Texto": "Diseño accesible para todos los Sunholders, creado para que sea práctico, cómodo y rápido poder adquirir el SUNI"
     },
     "Seguro": {
       "Titulo": "SEGURO",
-      "Texto": "Procesamiento confiable, el SUN está asentado sobre el protocolo de Blockchain TRON, lo que lo hace privado y a prueba de cualquier hackeo."
+      "Texto": "Procesamiento confiable, el SUNI está asentado sobre el protocolo de Blockchain TRON, lo que lo hace privado y a prueba de cualquier hackeo."
     },
     "Transparente": {
       "Titulo": "TRANSPARENTE",
-      "Texto": "En Sunshine estamos comprometidos a informar, explicar y justificar cada proyecto financiado con el SUN, aclarar las dudas de nuestros Sunholders y ser siempre claros y precisos brindando toda la información correspondiente a las inversiones"
+      "Texto": "En Sunshine estamos comprometidos con informar, explicar y justificar cada proyecto financiado con el SUNI, aclarar las dudas de nuestros Sunholders y ser siempre claros y precisos brindando toda la información correspondiente a las inversiones"
     }
   },
   "FAQ": {
     "Title": "PREGUNTAS FREQUENTES",
     "Items": [
       {
-        "Title": "¿Qué es un Token?",
-        "Text": "Un token es una ficha virtual que tiene una unidad de valor la cual es emitida en una Blockchain, tiene diversas funciones a parte de actuar como una moneda virtual, lo que lo hace transparente, privado y a prueba de cualquier hackeo."
+        "Title": "¿Qué es un Activo digital?",
+        "Text": "Un Activo Digital es una ficha virtual que tiene una unidad de valor la cual es emitida en una Blockchain, tiene diversas funciones a parte de actuar como una moneda virtual, lo que lo hace transparente, privado y a prueba de cualquier hackeo."
       },
       {
         "Title": "¿Qué es una criptomoneda?",
         "Text": "Es una moneda virtual que nació como un medio de intercambio digital, permitiendo transacciones instantáneas a través de internet. Mediante el uso de criptografía se aseguran y verifican las transacciones que se realicen con ella, además la criptografía controla la creación de nuevas unidades de una moneda en particular."
       },
       {
-        "Title": "¿Qué es una ICO?",
-        "Text": "ICO, por sus siglas en inglés Inicial Coin Offering u Oferta Inicial de Moneda, es un token el cual es administrado por la Blockchain correspondiente a la criptomoneda en uso es decir tiene registros limitados en una base de datos que no pueden ser modificados."
+        "Title": "¿Quiénes pueden comprar un SUNI?",
+        "Text": "Cualquier persona que sea mayor de edad y que desee comprar un SUNI puede hacerlo."
       },
       {
-        "Title": "¿Quiénes pueden comprar un SUN?",
-        "Text": "Cualquier persona que sea mayor de edad y que desee comprar un SUN puede hacerlo."
-      },
-      {
-        "Title": "¿Cómo comprar un SUN?",
+        "Title": "¿Cómo comprar un SUNI?",
         "Text": "Es muy fácil, sólo debes crear una cuenta en nuestra página y de ahí seleccionar el número de SUN que desees adquirir"
       }
     ]
@@ -97,7 +93,7 @@
     "Text": "Cada semana los que se suscriban al boletín informativo recibirán un artículo sobre las ICO, tokens, y el mundo de las criptomonedas."
   },
   "ContactUs": {
-    "Title": "Contactanos",
+    "Title": "CONTÁCTANOS",
     "Form": {
       "Name": "Nombre",
       "Email": "Email",
@@ -116,9 +112,13 @@
     "ButtonText": "¿Te gustaria unirte a nuestro equipo?",
     "Introduction": [
       "Somos un equipo de profesionales que trabajan para revolucionar el mundo digital financiero a través del compromiso y la transparencia, ofreciendo resultados favorables a los sunholders para consolidarse como socios estratégicos en el logro de sus objetivos."
-      
-    
-    ],
+     ],
+     "Mision":{
+       "Title":"MISIÓN",
+       "description":"Aportar valor y colaborar con los Sunholders a fortalecer su presente y construir su futuro sostenible en el tiempo."},
+       "Vision":{
+        "Title":"VISIÓN",
+        "description":"Mantenernos como una empresa confiable en el mercado, con solidez y óptima calidad garantizando la inversión de los Sunholders y generando el nivel de rentabilidad esperado."},
     "Differences": {
       "Title": "¿QUÉ NOS DIFERENCIA?",
       "Items": [
@@ -145,7 +145,7 @@
         {
           "Name": "Viridiana Uribe",
           "Career": "Operations Coordinator",
-          "Description": "Coordinación del correcto desarrollo de las actividades operativas de la empresa, Garantizar procesos que se lleven acabo en el tiempo y forma."
+          "Description": "Coordinación del  desarrollo de las actividades operativas de la empresa, Garantizar procesos que se lleven acabo en el tiempo y forma."
         },
         {
           "Name": "Jocelyn Uribe",
