se agrega nuevo tamaño y center de  acerca de

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -12,7 +12,7 @@
       "REVOLUCIÓN",
       "TECNOLÓGICA"
     ],
-    "Texto": "UNA NUEVA ERA DE EN EL MERCADO DIGITAL, basado en cadenas de bloques inteligentes para el intercambio de activos digitales.",
+    "Texto": "Una nueva era de el mercado digital, basado en cadenas de bloques inteligentes para el intercambio de activos digitales.",
     "TextoBoton": "SE PARTE DE SUNSHINE"
   },
   "CountdownL": {
@@ -84,7 +84,7 @@
       },
       {
         "Title": "¿Cómo comprar un SUNI?",
-        "Text": "Es muy fácil, sólo debes crear una cuenta en nuestra página y de ahí seleccionar el número de SUN que desees adquirir"
+        "Text": "Es muy fácil, sólo debes crear una cuenta en nuestra página y de ahí seleccionar el número de SUN que desees adquirir."
       }
     ]
   },
@@ -198,7 +198,7 @@
       "Title": "Próximamente",
       "Subtitle": "Nuestra app",
       "Items": [
-        "Tú cartera disponible donde y cuando quieras",
+        "Tu cartera disponible donde y cuando quieras",
         "Revisa tu saldo todo el tiempo",
         "Mantente conectado"
       ],
